--- a/src/omni_clean_gazebo/CMakeLists.txt
+++ b/src/omni_clean_gazebo/CMakeLists.txt
@@ -23,3 +23,8 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
+
+find_package(ament_cmake REQUIRED)
+install(DIRECTORY worlds models DESTINATION share/${PROJECT_NAME})
+ament_package()
+
