--- a/src/omni_clean_description/CMakeLists.txt
+++ b/src/omni_clean_description/CMakeLists.txt
@@ -23,3 +23,10 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
+
+
+find_package(ament_cmake REQUIRED)
+find_package(xacro REQUIRED)
+find_package(robot_state_publisher REQUIRED)
+install(DIRECTORY urdf DESTINATION share/${PROJECT_NAME})
+ament_package()
